test/analysis/reject/production-undeclared-rule-ref.ptk
# expected: E1303

rule foo = <bar>;